deploy/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: greeter-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      # a port that the istio ingress-gateway exposes
      number: 31400
      name: grpc
      protocol: GRPC
    hosts:
    - "*"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter
spec:
  hosts:
  - "*"
  gateways:
  - greeter-gateway
  http:
  - route:
    - destination:
        host: greeter
        port:
          number: 8080
